kubefiles/hello-world-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment-2
  namespace: sha
spec:
  selector:
    matchLabels:
      greeting: hello
      version: two
  replicas: 3
  template:
    metadata:
      labels:
        greeting: hello
        version: two
    spec:
      containers:
      - name: hello-app-2
        image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0"
