kubefiles/tornado-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tornado
  namespace: sha
  labels:
    app: tornado
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tornado
  template:
    metadata:
      labels:
        app: tornado
    spec:
      containers:
        - name: tornado
          image: sahandha/personalwebpage
          command: ["python","server.py"]
          ports:
            - containerPort: 8888
